<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.proyin.com.proyin2.DetalleExpediente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_socio"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/txtSocioExpediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_expediente"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/txtExpedienteDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_monto"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/txtMontoExpediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/vacio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_plazo"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/txtPlazoExpediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/vacio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_tasa"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/txtTasaExpediente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/vacio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_detail_exp_pvencimiento"
            android:textStyle="bold"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/txtFechaPVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:text="@string/vacio"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btnAprobarExpediente"
            android:gravity="center"
            android:text="@string/name_btnAprobarExpediente"
            android:background="@drawable/botones"
            android:textColor="@color/base"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
